--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
 body {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+strong, b {
+  font-weight: 700;
 }
 
 header {
   float: left;
   margin: 0;
   padding: 0;
-  margin-right: 10px;
-  height: 100vh;
+  /* height: 100vh; */
   width: 220px;
   box-shadow: 2px 2px 0.625rem rgba(0, 0, 0, 0.2);
 }
@@ -36,12 +42,13 @@ header img {
 .navegacao {
   display: flex;
   flex-direction: column;
+  height: 100vh;
 }
 
 .navegacao li {
   display: flex;
   flex-direction: column;
-  border-bottom: 2px solid #E7E7E7;
+  border-bottom: 2px solid #e7e7e7;
 }
 
 .navegacao a {
@@ -49,14 +56,186 @@ header img {
   padding: 0.8rem;
   text-decoration: none;
 }
+
+.cabecalho {
+  display: flex;
+  background-color: #fdf1eb;
+}
+
+.container {
+  padding: 0.312rem 2rem;
+}
+
+.cabecalho__text h2 {
+  font-size: 1.375rem;
+  margin: 0.312rem 0;
+}
+
+.cabecalho__lang {
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 2;
+  align-items: center;
+  margin-right: 2rem;
+}
+
+.cabecalho__lang__conteudo {
+  display: flex;
+  align-items: center;
+  border: 2px solid #cccccc;
+  border-radius: 3px;
+  padding: 10px;
+}
+
+.border__style {
+  border: 2px solid #cccccc;
+}
+
+.cabecalho__lang__conteudo img {
+  margin-right: 0.125rem;
+}
+
+.cabecalho__lang__conteudo select {
+  border: none;
+  background: transparent;
+}
+
+.cabecalho__profile {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+  text-align: end;
+  margin-top: 1rem;
+}
+
+.notification {
+  background-color: #ee7a3a;
+  color: white;
+  font-weight: 700;
+  position: relative;
+  height: 20px;
+  right: 0.935rem;
+  border-radius: 50%;
+  font-family: "Roboto";
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 37px;
+}
+
+.cabecalho__profile p {
+  margin-right: 1rem;
+}
+
 main {
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
+  padding-left: 1rem;
+}
+
+.titulo {
+  font-family: "Roboto", sans-serif;
+}
+
+.titulo__principal {
+  font-size: 1.25rem;
+  color: #ed7839;
+  font-weight: 700;
+  margin: 1rem 0;
+}
+
+.video__detalhes {
+  display: flex;
+  margin: 1rem 0;
+}
+
+.video__conteudo {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+
+  margin-right: 2rem 3rem;
+}
+
+.video__conteudo img {
+  width: 95%;
+}
+
+.detalhes__botoes {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  margin-right: 1.5rem;
+}
+
+.detalhes__botoes .link__text {
+  margin: .7rem 0;
+}
+
+.detalhes h2 {
+  border-bottom: 1px solid #ECECEC;
+}
+
+.titulo__colorido {
+  background-color: #FDF1EB;
+  font-size: 1.25rem;
+  font-weight: 500;
+  padding: 1rem;
+  border-radius: 3px;
+}
+
+.detalhes__box {
+  height: 510px;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #E7E7E7; 
+}
+
+::-webkit-scrollbar-thumb {
+  background: #BFBFBF;
+  border-radius: 8px 
+}
+
+.detalhes__box p {
+  margin: 10px 0;
+}
+
+.autores {
+  padding: 1rem 0;
+}
+
+.universidades {
+  padding-top: 1rem;
+}
+
+.autores p, .universidades p{
+  margin: 0;
+}
+
+.resumo {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 1.5rem;
+}
+
+.resumo__conteudo {
+  border-top: none;
+  padding: 1rem;
 }
 
 footer {
   display: flex;
-  border-top: 2px solid #E7E7E7;
-  font-family: 'Quicksand', sans-serif;
+  border-top: 2px solid #e7e7e7;
+  font-family: "Quicksand", sans-serif;
+  /* float: left; */
 }
 
 footer img {
@@ -82,6 +261,4 @@ footer div p {
   margin: 15px 13rem 10px 20px;
 }
 
-footer div p strong {
-  font-weight: 700;
-}
+
